--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 
 
 <div class="row">
-        <div style="margin: 0 auto 0 auto" class="col-md-12">
+        <div class="col-md-10 col-md-offset-1">
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -10,53 +10,122 @@
                     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                 </ol>
                 <div class="carousel-inner">
+
                     <div class="item active">
-                        <img src="images/ResBuilderMain.jpg" alt="First slide">
-                        <div class="carousel-caption">
-                            <h3 style="color:black">Free Resume Builder</h3>
-                            <p style="color:black">A sample resume builder using Handlebar Templating</p>
-                        </div>
+                        <img src="images/resumeTypeMockup.jpg" alt="First slide">
+                        
                     </div>
+
                     <div class="item">
-                        <img src="http://placehold.it/1200x500/9b59b6/8e44ad" alt="Second slide">
-                        <div class="carousel-caption">
-                            <h3>
-                                Second slide</h3>
-                            <p>
-                                Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                        </div>
-                    </div>
+                        <img src="images/resumeType.jpg" alt="Second slide">
+                        
+                    </div>                    
+
                     <div class="item">
-                        <img src="http://placehold.it/1200x500/34495e/2c3e50" alt="Third slide">
-                        <div class="carousel-caption">
-                            <h3>
-                                Third slide</h3>
-                            <p>
-                                Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                        </div>
+                        <img src="images/ResBuilderMain.jpg" alt="Third slide">
+                        
                     </div>
+
+
                 </div>
                 <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left"></span></a><a class="right carousel-control"
                         href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right">
                         </span></a>
             </div>
-            <div class="main-text">
-                <div class="col-md-12 text-center">
-                    <h1>A Simple Resume Builder</h1>
-                    <h3>
-                        Create a simple HTML resume and export to PDF. 
-                    </h3>
-                    <div class="">
-                        <a class="btn btn-clear btn-sm btn-min-block" href="http://www.jquery2dotnet.com/">Login</a><a class="btn btn-clear btn-sm btn-min-block"
-                            href="http://www.jquery2dotnet.com/">Registration</a></div>
-                </div>
-            </div>
-        </div>
+            
     </div>
 </div>
-<div id="push">
-</div>
+
+
+			<section>
+			        <div class="container">
+			            <div class="row">
+			                <div class="board">
+			                    <!-- <h2>Welcome to IGHALO!<sup>™</sup></h2>-->
+			                    <div class="board-inner">
+			                    <ul class="nav nav-tabs" id="myTab">
+			                    <div class="liner"></div>
+			                     <li class="active">
+			                     <a href="#home" data-toggle="tab" title="welcome">
+			                      <span class="round-tabs one">
+			                              <i class="glyphicon glyphicon-home"></i>
+			                      </span> 
+			                  </a></li>
+
+			                  <li><a href="#profile" data-toggle="tab" title="generalInfo">
+			                     <span class="round-tabs two">
+			                         <i class="glyphicon glyphicon-user"></i>
+			                     </span> 
+			           </a>
+			                 </li>
+			                 <li><a href="#messages" data-toggle="tab" title="schoolInfo">
+			                     <span class="round-tabs three">
+			                          <i class="glyphicon glyphicon-gift"></i>
+			                     </span> </a>
+			                     </li>
+
+			                     <li><a href="#settings" data-toggle="tab" title="workInfo">
+			                         <span class="round-tabs four">
+			                              <i class="glyphicon glyphicon-comment"></i>
+			                         </span> 
+			                     </a></li>
+
+
+			                     </ul></div>
+
+			                     <div class="tab-content">
+			                      <div class="tab-pane fade in active" id="home">
+
+			                          <h3 class="head text-center">Free Resume Builder<sup>™</sup> <span style="color:#f48260;">♥</span></h3>
+			                          <p class="narrow text-center">
+			                              Test it out.  Just a reminder, I am not responsible for the resumes that other prior visitors might have created :>
+			                          </p>
+			                          
+			                          <p class="text-center">
+			                    <a href="/admin" class="btn btn-success btn-outline-rounded green"> Test it out <span style="margin-left:10px;" class="glyphicon glyphicon-send"></span></a>
+			                </p>
+			                      </div>
+			                      <div class="tab-pane fade" id="profile">
+			                          <h3 class="head text-center">Free Resume Builder<sup>™</sup> <span style="color:#f48260;">♥</span></h3>
+			                          <p class="narrow text-center">
+			                              Another reminder, that I am not responsible for the resumes that previous visitors might have created.  :)
+			                          </p>
+			                          
+			                          <p class="text-center">
+			                    <a href="/admin" class="btn btn-success btn-outline-rounded green"> create your profile <span style="margin-left:10px;" class="glyphicon glyphicon-send"></span></a>
+			                </p>
+			                          
+			                      </div>
+			                      <div class="tab-pane fade" id="messages">
+			                          <h3 class="head text-center">Free Resume Builder<sup>™</sup> <span style="color:#f48260;">♥</span></h3>
+			                          <p class="narrow text-center">
+			                              Lorem ipsum dolor sit amet, his ea mollis fabellas principes. Quo mazim facilis tincidunt ut, utinam saperet facilisi an vim.
+			                          </p>
+			                          
+			                          <p class="text-center">
+			                    <a href="/admin" class="btn btn-success btn-outline-rounded green"> TRY IT! <span style="margin-left:10px;" class="glyphicon glyphicon-send"></span></a>
+			                </p>
+			                      </div>
+			                      <div class="tab-pane fade" id="settings">
+			                          <h3 class="head text-center">Drop comments!</h3>
+			                          <p class="narrow text-center">
+			                              Random carousel content
+			                          </p>
+			                          
+			                          <p class="text-center">
+			                    <a href="/admin" class="btn btn-success btn-outline-rounded green"> Make a sample resume <span style="margin-left:10px;" class="glyphicon glyphicon-send"></span></a>
+			                </p>
+			                      </div>
+			                      
+			<div class="clearfix"></div>
+			</div>
+
+			</div>
+			</div>
+			</div>
+			</section>
+
 
 
 </div>
