--- a/views/resume-simple.handlebars
+++ b/views/resume-simple.handlebars
@@ -32,10 +32,9 @@
             <h1 class="name">{{{resumeInfo.genInfo.firstName}}} {{{resumeInfo.genInfo.lastName}}} <br />
               <span>{{{resumeInfo.genInfo.position}}}</span></h1>
             <ul>
-              <li class="ad">111 Lorem Street, 34785, Ipsum City</li>
-              <li class="mail">johnsmith@business.com</li>
-              <li class="tel">+11 444 555 22 33</li>
-              <li class="web">www.businessweb.com</li>
+              <li class="mail">{{{resumeInfo.contactInfo.email}}}</li>
+              <li class="tel">{{{resumeInfo.contactInfo.phone}}}</li>
+              <li class="web">{{{resumeInfo.contactInfo.website}}}</li>
             </ul>
           </div>
           <!-- End Personal Information -->
