--- a/public/styles/sass/base.scss
+++ b/public/styles/sass/base.scss
@@ -11,3 +11,5 @@
 @import "sections/admin";  // form style rules
 
 @import "sections/forms";  // form style rules
+
+@import "sections/homepage";  // form style rules
