--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -42,7 +42,7 @@
 			        <div class="container">
 			            <div class="row">
 			                <div class="board">
-			                    <!-- <h2>Welcome to IGHALO!<sup>™</sup></h2>-->
+			                  
 			                    <div class="board-inner">
 			                    <ul class="nav nav-tabs" id="myTab">
 			                    <div class="liner"></div>
@@ -61,13 +61,13 @@
 			                 </li>
 			                 <li><a href="#messages" data-toggle="tab" title="schoolInfo">
 			                     <span class="round-tabs three">
-			                          <i class="glyphicon glyphicon-gift"></i>
+			                          <i class="glyphicon glyphicon-envelope"></i>
 			                     </span> </a>
 			                     </li>
 
 			                     <li><a href="#settings" data-toggle="tab" title="workInfo">
 			                         <span class="round-tabs four">
-			                              <i class="glyphicon glyphicon-comment"></i>
+			                              <i class="glyphicon glyphicon-briefcase"></i>
 			                         </span> 
 			                     </a></li>
 
@@ -79,7 +79,7 @@
 
 			                          <h3 class="head text-center">Free Resume Builder<sup>™</sup> <span style="color:#f48260;">♥</span></h3>
 			                          <p class="narrow text-center">
-			                              Test it out.  Just a reminder, I am not responsible for the resumes that other prior visitors might have created :>
+			                              Test it out.  Just a reminder, I am not responsible for the resumes that other prior visitors might have created :)
 			                          </p>
 			                          
 			                          <p class="text-center">
