--- a/views/resume-simple.handlebars
+++ b/views/resume-simple.handlebars
@@ -25,7 +25,7 @@
       <div id="paper-mid">
         <div class="entry">
           <!-- Begin Image -->
-          <img class="portrait" src="/images/image.jpg" alt="John Smith" />
+          <img class="portrait" src="/images/imageTest.jpg" alt="Test Image" />
           <!-- End Image -->
           <!-- Begin Personal Information -->
           <div class="self">
