--- a/views/resumeForm.handlebars
+++ b/views/resumeForm.handlebars
@@ -6,7 +6,7 @@
             <div id="admin">
               <div class="admin-title">
                 <div class="caption">
-                  ADMIN
+                  
                 </div>
                 
               </div>
@@ -15,7 +15,7 @@
                   <div class="table-actions-wrapper">
 
                   
-                    <button data-toggle="modal" data-target="#myModal" class="btn btn-sm btn-success table-group-action-submit">ADD RESUME</button>
+                    <button data-toggle="modal" data-target="#myModal" class="btn btn-sm btn-success table-group-action-submit">ADD RESUME +</button>
                     
                   </div>
                   <table class="table table-striped table-bordered table-hover" id="adminTable">
@@ -47,26 +47,26 @@
                   <tbody>
                      
                    {{#each resumeList}}
-                      <tr role="row" class="filter">
+                      <tr id={{_id}} role="row" class="filter">
                         
                         <td>
                           {{resumeName}}
                         </td>
                         <td>
-                          Professional
+                          {{resumeType}}
                         </td>
                         <td>
-                          5/30/2015
+                          {{createdOn}}
                         </td>
                        
                         <td>
-                          What
+                          Completed
                         </td>
                         <td>
 
-                            <button class="btn btn-sm searchBtn"><a target="blank" href="/resume/{{_id}}" data-id={{_id}}>Render</a></button>
+                            <button class="btn btn-sm render"><a target="blank" href="admin/render/{{_id}}?type={{resumeType}}" data-id={{_id}}>Render</a></button>
 
-                          <button class="btn btn-sm red filter-cancel">Delete</button>
+                          <button class="btn btn-sm delete"><a class="red deleteBtn" data-id={{_id}}>Delete</a></button>
                         </td>
                       </tr>
                     {{/each}}
@@ -94,6 +94,15 @@
                               <h4 class="modal-title" id="myModalLabel">Resume Form</h4>
                               <div class="input-group resName">
                                 <input id="resumeName" type="text" class="form-control" name="resumeName" value="" placeholder="Enter Resume Name">                                        
+                              </div>
+                              <div class="input-group resType">
+                                <select id="resumeType">
+
+                                  <option value="basic">Basic</option>
+                                  <option value="simple">Simple</option>
+                                  <option value="professional">Professional</option>
+                                  
+                                </select>
                               </div>
                             </div>
                           <div class="modal-body">
@@ -135,12 +144,12 @@
                                                             </div>
                                     
                                                             <div class="input-group">
-                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-font"></i></span>
                                                                         <input id="firstName" type="text" class="form-control firstName" name="firstName" value="" placeholder="First Name">                                        
                                                             </div>
                                                                 
                                                             <div class="input-group">
-                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-font"></i></span>
                                                                         <input id="lastName" type="text" class="form-control lastName" name="lastName" value="" placeholder="Last Name">    
                                                               </div>
 
@@ -175,7 +184,7 @@
                                                             <h3>Contact Info</h3>
                                       
                                                               <div class="col-sm-8 input-group">
-                                                                          <span class="input-group-addon"><i class="glyphicon glyphicon-email"></i></span>
+                                                                          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
                                                                           <input id="email" type="text" class="form-control email" name="email" value="" placeholder="Email">                                        
                                                               </div>
                                                                   
@@ -185,12 +194,12 @@
                                                                 </div>
 
                                                                 <div class="col-sm-8 input-group">
-                                                                          <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                                                                          <span class="input-group-addon"><i class="glyphicon glyphicon-globe"></i></span>
                                                                           <input id="website" type="text" class="form-control website" name="website" value="" placeholder="Personal Website">    
                                                                 </div>
 
                                                                 <div class="col-sm-8 input-group">
-                                                                          <span class="input-group-addon"><i class="glyphicon glyphicon-fb"></i></span>
+                                                                          <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                                                                           <input id="facebook" type="text" class="form-control facebook" name="facebook" value="" placeholder="Facebook URL">    
                                                                 </div>
                                                                   
@@ -220,30 +229,26 @@
                                                           <h3>School</h3>
                                     
                                                             <div class="col-sm-8 input-group">
-                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-email"></i></span>
+                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-education"></i></span>
                                                                         <input id="schoolName" type="text" class="form-control schoolName" name="schoolName" value="" placeholder="School Name">                                        
                                                             </div>
                                                                 
                                                             <div class="col-sm-8 input-group">
-                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-phone"></i></span>
-                                                                        <input id="certificate" type="text" class="form-control certificate" name="certificate" value="" placeholder="Certificate Title">    
+                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-pushpin"></i></span>
+                                                                        <input id="certificateTitle" type="text" class="form-control certificate" name="certificate" value="" placeholder="Certificate Title">    
                                                               </div>
 
                                                               <div class="col-sm-8 input-group">
-                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                                                         <input id="startDate" type="text" class="form-control startDate" name="startDate" value="" placeholder="Start Date">    
                                                               </div>
 
                                                               <div class="col-sm-8 input-group">
-                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-fb"></i></span>
-                                                                        <input id="endDate" type="text" class="form-control endDate" name="endDate" value="" placeholder="End Date">    
+                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                                                                        <input id="completedDate" type="text" class="form-control completedDate" name="completedDate" value="" placeholder="Completed Date">   
                                                               </div>
                                                                 
 
-                                                                <div class="col-sm-8 input-group">
-                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                                                                        <input id="linkedIn" type="text" class="form-control linkedIn" name="currentPosition" value="" placeholder="LinkedIn Account">    
-                                                              </div>
 
                                                               <label for="courseDescription">Course Description</label>  
                                                                 <textarea rows="4" id="courseDescription" class="courseDescription"></textarea>  
@@ -281,30 +286,26 @@
                                                           <h3>Work</h3>
                                     
                                                             <div class="col-sm-8 input-group">
-                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-email"></i></span>
+                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-king"></i></span>
                                                                         <input id="companyName" type="text" class="form-control companyName" name="companyName" value="" placeholder="Company Name">                                       
                                                             </div>
                                                                 
                                                             <div class="col-sm-8 input-group">
-                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-phone"></i></span>
+                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-briefcase"></i></span>
                                                                         <input id="positionTitle" type="text" class="form-control positionTitle" name="positionTitle" value="" placeholder="Position Title">    
                                                               </div>
 
                                                               <div class="col-sm-8 input-group">
-                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                                                         <input id="startDate" type="text" class="form-control startDate" name="startDate" value="" placeholder="Start Date">    
                                                               </div>
 
                                                               <div class="col-sm-8 input-group">
-                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-fb"></i></span>
+                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                                                         <input id="endDate" type="text" class="form-control endDate" name="endDate" value="" placeholder="End Date">    
                                                               </div>
                                                                 
 
-                                                                <div class="col-sm-8 input-group">
-                                                                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                                                                        <input id="linkedIn" type="text" class="form-control linkedIn" name="currentPosition" value="" placeholder="LinkedIn Account">    
-                                                              </div>
 
                                                               <label for="workDescription">Work Description</label>  
                                                               <textarea rows="4" id="workDescription" class="workDescription"></textarea>  
@@ -347,7 +348,7 @@
                           </div>
                           <div class="modal-footer">
                               <center>
-                              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                              <button id="closeBut" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                               <button id="saveRes" type="button" class="btn btn-success">Save</button>
                               </center>
                           </div>
