edit to make sure cdn comes from https

--- a/views/resume-basic.handlebars
+++ b/views/resume-basic.handlebars
@@ -21,7 +21,7 @@
     <!-- ===========================
     STYLESHEETS
     =========================== -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/resumeStyle.css">
     <link rel="stylesheet" href="/styles/responsive.css">
     <link type="text/css" rel="stylesheet" href="/styles/resumeBasicPrint.css" media="print"/>
@@ -29,8 +29,8 @@
     <!-- ===========================
     FONTS & ICONS
     =========================== -->
-    <link href='http://fonts.googleapis.com/css?family=Kristi|Alegreya+Sans:300' rel='stylesheet' type='text/css'>
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Kristi|Alegreya+Sans:300' rel='stylesheet' type='text/css'>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
 
     <!--[if IE]>
